# PaperStructure

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
demos/demo1_from_mineru/: demo1_260125_082550.md  demo1_260125_082550_content_list.json  demo1_260125_082550_content_list_v2.json  demo1_260125_082550_middle.json  demo1_260125_082550_model.json
src/paper_structure/: __init__.py  cli.py  pipeline.py  preview.py
src/paper_structure/libs/: __init__.py
src/paper_structure/libs/latex_ocr/: README.md  __init__.py  config.py  latex_ocr.py  models.py  onnx_session.py  preprocess.py  tokenizer.py  utils.py
src/paper_structure/libs/onnx_ocr/: __init__.py  config.py  onnx_base.py  pipeline.py  postprocess.py  preprocess.py  text_classifier.py  text_detector.py  text_recognizer.py  utils.py
src/paper_structure/libs/yolox/: README.md  __init__.py  constants.py  elements.py  layoutelement.py  math_utils.py  model.py  requirements.txt  utils.py  yolox_model.py
src/paper_structure/models/: __init__.py  config.py  registry.py
src/paper_structure/modules/formula/: __init__.py  recognizer.py
src/paper_structure/modules/layout/: __init__.py  detector.py
src/paper_structure/modules/markdown/: __init__.py  generator.py
src/paper_structure/modules/text/: __init__.py  recognizer.py
